[package]
name = "heimdall"
version = "0.2.0"
edition = "2021"
authors = ["johnteper <johnteper@stellamar.tech>"]
description = "Services monitor system using SMTP"
license = "GPL-3.0"
repository = "https://github.com/StellaMarTech/heimdall"
homepage = "https://heimdall.stellamar.tech"


[profile.release]
lto = true

[dependencies]
lettre = "0.9.6"
jsonwebtokens = "1.1.0"
dotenv = "0.15.0"
chrono = "0.4.19"
uuid = { version = "1.1.1", features = ["serde", "v4"] }
axum = "0.5.7"
tokio = { version = "1.19.2", features = ["full"] }
serde = { version = "1.0.136", features = ["derive"]}
log = "0.4.17"
time = "0.3.9"
simplelog = "0.12.0"
thiserror = "1.0.31"

[[bin]]
name = "heimdall-server"
path = "src/main.rs"

[lib]
name = "heimdall"
path = "src/heimdall/mod.rs"

